<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CreateActivityGenerate">


    <TextView
        android:id="@+id/tvCreateUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="110dp"
        android:text="@string/create_username"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="99dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username_text"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateUsername" />

    <Button
        android:id="@+id/btnContinueUname"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_round"
        android:text="@string/continue_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelUname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancelUname"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="210dp"
        android:background="@drawable/btn_round"
        android:text="@string/cancel_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>