<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".JoinActivityUsername">

    <TextView
        android:id="@+id/tvCreateUsernameJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="103dp"
        android:text="@string/create_username"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUsernameJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="99dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username_text"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateUsernameJoin" />

    <Button
        android:id="@+id/btnContinueUnameJoin"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/btn_round"
        android:text="@string/continue_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelUnameJoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancelUnameJoin"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="149dp"
        android:background="@drawable/btn_round"
        android:text="@string/cancel_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>